--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -22,26 +22,33 @@
                     </a>
 
                     <div class="hidden w-full md:block md:w-auto">
-                        <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white bg-gray-800 md:bg-gray-900 border-gray-700">
+                        <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 
+                            md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white bg-gray-800 md:bg-gray-900 border-gray-700">
                             {% if request.user.is_authenticated %}
                                 <li>
-                                    <p class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 text-white">Hey there, {{ request.user.username }}!</p>
+                                    <p class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent 
+                                        md:text-blue-700 md:p-0 text-white">Hey there, {{ request.user.username }}!</p>
                                 </li>
                                 <li>
-                                    <a href="/rooms" class = "px-5 py-3 rounded-lg text-white bg-indigo-500 shadow-lg shadow-indigo-500/50 hover:bg-rose-500 hover:shadow-rose-500/50">Rooms</a>
+                                    <a href="/rooms" class = "px-5 py-3 rounded-lg text-white bg-indigo-500 shadow-lg 
+                                        shadow-indigo-500/50 hover:bg-rose-500 hover:shadow-rose-500/50">Rooms</a>
                                 </li>
                                 <li>
-                                    <a href="/logout/" class = "px-5 py-3 rounded-lg text-white bg-indigo-500 shadow-lg shadow-indigo-500/50 hover:bg-rose-500 hover:shadow-rose-500/50">Log Out</a>
+                                    <a href="/logout/" class = "px-5 py-3 rounded-lg text-white bg-indigo-500 shadow-lg 
+                                        shadow-indigo-500/50 hover:bg-rose-500 hover:shadow-rose-500/50">Log Out</a>
                                 </li>
                             {% else %}
                                 <li>
-                                    <p class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 text-white">You're logged out!</p>
+                                    <p class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent 
+                                        md:text-blue-700 md:p-0 text-white">You're logged out!</p>
                                 </li>
                                 <li>
-                                    <a href="/login" class = "px-5 py-3 rounded-lg text-white bg-indigo-500 shadow-lg shadow-indigo-500/50 hover:bg-rose-500 hover:shadow-rose-500/50">Log In</a>
+                                    <a href="/login" class = "px-5 py-3 rounded-lg text-white bg-indigo-500 
+                                        shadow-lg shadow-indigo-500/50 hover:bg-rose-500 hover:shadow-rose-500/50">Log In</a>
                                 </li>
                                 <li>
-                                    <a href="/signup/" class = "px-5 py-3 rounded-lg text-white bg-indigo-500 shadow-lg shadow-indigo-500/50 hover:bg-rose-500 hover:shadow-rose-500/50">Sign Up</a>
+                                    <a href="/signup/" class = "px-5 py-3 rounded-lg text-white bg-indigo-500 
+                                        shadow-lg shadow-indigo-500/50 hover:bg-rose-500 hover:shadow-rose-500/50">Sign Up</a>
                                 </li>
                             {% endif %}
                         </ul>
