--- a/room/templates/room/rooms.html
+++ b/room/templates/room/rooms.html
@@ -7,7 +7,7 @@
 <div class="lg:w-1/2 lg:mx-auto px-10 py-10 bg-gray-800">
     <h1 class="text-4xl text-white text-center">Rooms</h1>
 </div>
-<div class="lg:w-1/2 lg:mx-auto mx-4 p-4 bg-white bg-gray-800 rounded-bl-lg rounded-br-lg">
+<div class="lg:w-1/2 lg:mx-auto mx-4 p-4 bg-gray-800 rounded-bl-lg rounded-br-lg">
     <div class="lg:w-3/4 lg:mx-auto p-2 chat-messages space-y-3" id="chat-messages">
         {% for room in rooms %}
             <div class="p-1 bg-gray-200 rounded-lg whitespace-normal break-words flex justify-between">
