--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -14,7 +14,7 @@
     </head>
     <body class = "py-20 bg-gray-600">
         <div class="lg:w-1/2 lg:mx-auto ">
-            <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 bg-gray-900 rounded-tl-lg rounded-tr-lg">
+            <nav class="border-gray-200 px-2 sm:px-4 py-2.5 bg-gray-900 rounded-tl-lg rounded-tr-lg">
                 <div class="container flex flex-wrap justify-between items-center mx-auto">
                     <a href="/" class="flex items-center">
                         <img src="https://www.iconsdb.com/icons/preview/white/chat-4-xxl.png" class="w-20 h-20 py-5 px-5">
@@ -23,7 +23,7 @@
 
                     <div class="hidden w-full md:block md:w-auto">
                         <ul class="flex flex-col p-4 mt-4 bg-gray-50 rounded-lg border border-gray-100 
-                            md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white bg-gray-800 md:bg-gray-900 border-gray-700">
+                            md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 bg-gray-800 md:bg-gray-900 border-gray-700">
                             {% if request.user.is_authenticated %}
                                 <li>
                                     <p class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent 
